--- a/dietersDilemmaBelief.html
+++ b/dietersDilemmaBelief.html
@@ -1084,7 +1084,7 @@
               {/* Title */}
               <div className="text-center mb-6">
                 <div className="flex items-center justify-center gap-3 mb-4">
-                  <h1 className="text-2xl font-bold text-gray-800">Your Beliefs About the Game</h1>
+                  <h1 className="text-2xl font-bold text-gray-800">Your Beliefs About How {CONFIG.playerName0}, {CONFIG.playerName1}, and Headaches Are Related</h1>
                   {CONFIG.currentSymbol && (
                     <div
                       style={{ transform: 'scale(0.5)', transformOrigin: 'left center' }}
