--- a/gameShuffle.html
+++ b/gameShuffle.html
@@ -268,7 +268,7 @@
     function updateTitle(scenario) {
       const titleEl = document.getElementById('title');
       if (titleEl && scenario) {
-        titleEl.textContent = `This game is about drinking ${scenario.drinkName}, your ${scenario.chemicalName} levels and your headache status`;
+        titleEl.textContent = `This study is about drinking ${scenario.drinkName}, your ${scenario.chemicalName} levels and your headache status`;
       }
     }
 
