--- a/dagElicitation.html
+++ b/dagElicitation.html
@@ -128,7 +128,7 @@
       const nodes = [
         { id: 'A', label: `Drink ${playerName0}`, x: 200, y: 100, icon: playerIcon0 },
         { id: 'X', label: `${playerName1} Level`, x: 500, y: 100, icon: '📟' },
-        { id: 'Y', label: 'Headache', x: 350, y: 300, icon: '😐' }
+        { id: 'Y', label: 'How You Feel', x: 350, y: 300, icon: '😐' }
       ];
 
       // Node pairs for confirmation
@@ -141,7 +141,7 @@
       const nodeNames = {
         'A': `Drink ${playerName0}`,
         'X': `${playerName1} Level`,
-        'Y': 'Headache'
+        'Y': 'How You Feel'
       };
 
       const getNode = (id) => nodes.find(n => n.id === id);
