--- a/dietersDilemmaBelief.html
+++ b/dietersDilemmaBelief.html
@@ -467,30 +467,28 @@
             <div className="text-sm text-slate-400 mb-2 h-5">Morning Decision</div>
             <div className="flex gap-2 h-32 items-center">
               {/* Drink button */}
-              <div className={`relative flex items-center justify-center w-32 h-20 rounded-xl border-2 transition-all ${
-                isOn ? 'bg-green-600 border-green-500' :
-                isCause ? 'bg-green-600/50 border-green-500/50' :
-                'bg-slate-700 border-slate-600'
+              <div className={`relative flex items-center justify-center w-32 h-20 rounded-lg transition-all shadow-lg ${
+                isOn || isCause ? 'bg-green-600 text-white' :
+                'bg-slate-700 text-slate-400'
               } ${drinkHighlight}`}>
                 {isLocked && isOn && <span className="absolute -top-2 -right-2 text-sm">🔒</span>}
                 <span className="text-2xl mr-2">🥤</span>
                 <div className="flex flex-col">
-                  <span className={`text-sm font-bold ${isOn || isCause ? 'text-white' : 'text-slate-400'}`}>Drink</span>
-                  <span className={`text-sm font-bold ${isOn || isCause ? 'text-white' : 'text-slate-400'}`}>{playerName0}</span>
-                  <span className={`text-xs ${isOn || isCause ? 'text-white/70' : 'text-slate-500'}`}>-$0</span>
+                  <span className="text-sm font-bold">Drink</span>
+                  <span className="text-sm font-bold">{playerName0}</span>
+                  <span className="text-xs opacity-70">-$0</span>
                 </div>
               </div>
               {/* Skip button */}
-              <div className={`relative flex items-center justify-center w-32 h-20 rounded-xl border-2 transition-all ${
-                isOff ? 'bg-red-600 border-red-500' :
-                isCause ? 'bg-red-600/50 border-red-500/50' :
-                'bg-slate-700 border-slate-600'
+              <div className={`relative flex items-center justify-center w-32 h-20 rounded-lg transition-all shadow-lg ${
+                isOff || isCause ? 'bg-red-600 text-white' :
+                'bg-slate-700 text-slate-400'
               } ${skipHighlight}`}>
                 {isLocked && isOff && <span className="absolute -top-2 -right-2 text-sm">🔒</span>}
-                <span className={`text-2xl mr-2 ${isOff || isCause ? 'text-white' : 'text-slate-500'}`}>⊘</span>
+                <span className="text-2xl mr-2">⊘</span>
                 <div className="flex flex-col">
-                  <span className={`text-sm font-bold ${isOff || isCause ? 'text-white' : 'text-slate-400'}`}>Skip</span>
-                  <span className={`text-xs ${isOff || isCause ? 'text-white/70' : 'text-slate-500'}`}>$0</span>
+                  <span className="text-sm font-bold">Skip</span>
+                  <span className="text-xs opacity-70">$0</span>
                 </div>
               </div>
             </div>
