--- a/gameShuffle.html
+++ b/gameShuffle.html
@@ -21,10 +21,10 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center;
+      justify-content: flex-start;
       background: linear-gradient(135deg, #1a1a2e 0%, #16213e 50%, #0f3460 100%);
       font-family: 'Segoe UI', system-ui, sans-serif;
-      padding: 20px;
+      padding: 40px 20px 20px 20px;
     }
 
     h1 {
