--- a/dietersDilemma.html
+++ b/dietersDilemma.html
@@ -48,6 +48,8 @@
           if (qConfig.playerName0) CONFIG.playerName0 = qConfig.playerName0;
           if (qConfig.playerName1) CONFIG.playerName1 = qConfig.playerName1;
           if (qConfig.playerName2) CONFIG.playerName2 = qConfig.playerName2;
+          if (qConfig.playerName2Pos) CONFIG.playerName2Pos = qConfig.playerName2Pos;
+          if (qConfig.playerName2Neg) CONFIG.playerName2Neg = qConfig.playerName2Neg;
           if (qConfig.playerIcon0) CONFIG.playerIcon0 = qConfig.playerIcon0;
           if (qConfig.currentSymbol) CONFIG.currentSymbol = qConfig.currentSymbol;
           if (qConfig.causal !== undefined) CONFIG.causal = qConfig.causal;
@@ -89,9 +91,9 @@
     // Configuration (matches Qualtrics embedded data names)
     // A = drink decision (1=drink, 0=skip)
     // X = chemical level (1=normal, 0=abnormal)  
-    // Y = feeling (1=energetic, 0=tired)
+    // Y = feeling (1=playerName2Pos, 0=playerName2Neg)
     const CONFIG = {
-      yBonus: 2.00,           // Bonus when Y=1 (energetic)
+      yBonus: 2.00,           // Bonus when Y=1
       aCost: 0.00,            // Cost of drinking (A=1)
       totalRounds: 10,
       currency: '$',
@@ -116,6 +118,8 @@
       playerName0: 'Driftwell', // Drink name (A)
       playerName1: 'Qivaryn',   // Chemical name (X)
       playerName2: 'Feeling',   // Outcome name (Y)
+      playerName2Pos: 'energetic', // Positive outcome (Y=1)
+      playerName2Neg: 'tired',     // Negative outcome (Y=0)
       playerIcon0: '🥤',        // Icon for drink action (A)
       currentSymbol: null,      // HTML for scenario tile display
     };
@@ -206,8 +210,8 @@
         <div className="absolute inset-0 bg-slate-900 flex items-center justify-center z-20 rounded-2xl">
           <div className="text-center">
             <div className="text-6xl mb-4">🌅</div>
-            <div className="text-3xl font-bold text-white">New Week</div>
-            <div className="text-xl text-slate-400 mt-2">Monday, Week {dayNumber}</div>
+            <div className="text-3xl font-bold text-white">New Monday</div>
+            <div className="text-xl text-slate-400 mt-2">Week {dayNumber}</div>
           </div>
         </div>
       );
@@ -277,7 +281,7 @@
             </span>
           </div>
           <div className="text-lg font-bold text-white mt-3">
-            {mood === null ? 'Later this day...' : mood === 1 ? 'Energetic!' : 'Tired'}
+            {mood === null ? 'Later this day...' : mood === 1 ? `${CONFIG.playerName2Pos.charAt(0).toUpperCase() + CONFIG.playerName2Pos.slice(1)}!` : CONFIG.playerName2Neg.charAt(0).toUpperCase() + CONFIG.playerName2Neg.slice(1)}
           </div>
           <div className={`text-lg font-bold mt-1 ${mood === null ? 'invisible' : mood === 1 ? 'text-green-400' : 'text-red-400'}`}>
             {mood === null ? '\u00A0' : mood === 1 ? `+${CONFIG.currency}${CONFIG.yBonus}` : `${CONFIG.currency}0`}
@@ -344,12 +348,12 @@
                   )}
                 </div>
                 <div className="text-xs text-slate-400 text-center">
-                  energetic
+                  {CONFIG.playerName2Pos}
                 </div>
               </div>
             )}
           </div>
-          
+
           <MoodLarge mood={Y} />
         </div>
       );
@@ -367,7 +371,7 @@
       return (
         <div className="bg-gradient-to-br from-slate-800 to-slate-900 rounded-2xl p-5 border-2 border-cyan-500/30">
           <h3 className="text-cyan-400 font-bold text-lg mb-4 flex items-center gap-2">
-            <span className="text-2xl">📊</span> {CONFIG.playerName1} → Energetic
+            <span className="text-2xl">📊</span> {CONFIG.playerName1} → {CONFIG.playerName2Pos.charAt(0).toUpperCase() + CONFIG.playerName2Pos.slice(1)}
           </h3>
           
           <div className="grid grid-cols-2 gap-4">
@@ -382,7 +386,7 @@
                 {X1Y1Rate !== null ? `${X1Y1Rate}%` : '—'}
               </div>
               <div className="text-sm text-slate-400">
-                energetic ({stats.X1.Y1}/{stats.X1.total})
+                {CONFIG.playerName2Pos} ({stats.X1.Y1}/{stats.X1.total})
               </div>
               <div className="mt-3 h-3 bg-slate-600 rounded-full overflow-hidden">
                 <div 
@@ -403,7 +407,7 @@
                 {X0Y1Rate !== null ? `${X0Y1Rate}%` : '—'}
               </div>
               <div className="text-sm text-slate-400">
-                energetic ({stats.X0.Y1}/{stats.X0.total})
+                {CONFIG.playerName2Pos} ({stats.X0.Y1}/{stats.X0.total})
               </div>
               <div className="mt-3 h-3 bg-slate-600 rounded-full overflow-hidden">
                 <div 
@@ -421,7 +425,7 @@
                 <span className="text-white font-bold text-xl">
                   {X1Y1Rate - X0Y1Rate > 0 ? '+' : ''}{X1Y1Rate - X0Y1Rate}%
                 </span>
-                <span className="text-slate-400 text-sm"> more likely to be energetic when {CONFIG.playerName1} is normal</span>
+                <span className="text-slate-400 text-sm"> more likely to be {CONFIG.playerName2Pos} when {CONFIG.playerName1} is normal</span>
               </div>
             </div>
           )}
@@ -448,7 +452,7 @@
               className={`w-32 h-20 px-4 py-3 rounded-lg font-bold transition-all flex items-center justify-center gap-2 ${
                 disabled
                   ? 'bg-slate-700 text-slate-500 cursor-not-allowed'
-                  : 'bg-green-600 hover:bg-green-500 text-white shadow-lg hover:shadow-xl cursor-pointer'
+                  : 'bg-blue-600 hover:bg-blue-500 text-white shadow-lg hover:shadow-xl cursor-pointer'
               }`}
             >
               <span className="text-xl">{CONFIG.playerIcon0}</span>
@@ -464,7 +468,7 @@
               className={`w-32 h-20 px-4 py-3 rounded-lg font-bold transition-all flex flex-col items-center justify-center ${
                 disabled
                   ? 'bg-slate-700 text-slate-500 cursor-not-allowed'
-                  : 'bg-red-600 hover:bg-red-500 text-white shadow-lg hover:shadow-xl cursor-pointer'
+                  : 'bg-blue-600 hover:bg-blue-500 text-white shadow-lg hover:shadow-xl cursor-pointer'
               }`}
             >
               <div className="flex items-center gap-2">
@@ -496,13 +500,13 @@
             </div>
             <div className="grid grid-cols-2 gap-2 text-xs">
               <div className="bg-slate-700/50 rounded p-2 text-center">
-                <div className="text-green-400">{CONFIG.playerName0} → Energetic</div>
+                <div className="text-green-400">{CONFIG.playerName0} → {CONFIG.playerName2Pos.charAt(0).toUpperCase() + CONFIG.playerName2Pos.slice(1)}</div>
                 <div className="text-white font-bold">
                   {A1Y1Rate !== null ? `${A1Y1Rate}%` : '—'}
                 </div>
               </div>
               <div className="bg-slate-700/50 rounded p-2 text-center">
-                <div className="text-red-400">Skip → Energetic</div>
+                <div className="text-red-400">Skip → {CONFIG.playerName2Pos.charAt(0).toUpperCase() + CONFIG.playerName2Pos.slice(1)}</div>
                 <div className="text-white font-bold">
                   {A0Y1Rate !== null ? `${A0Y1Rate}%` : '—'}
                 </div>
@@ -835,7 +839,7 @@
                 }`}>
                   {phase === 'decision' && `Morning: Will you drink ${CONFIG.playerName0}?`}
                   {phase === 'chemical' && `Reading your ${CONFIG.playerName1} level...`}
-                  {phase === 'outcome' && `Later this day: ${currentY === 1 ? 'Energetic! 😊' : 'Tired 😔'}`}
+                  {phase === 'outcome' && `Later this day: ${currentY === 1 ? `${CONFIG.playerName2Pos.charAt(0).toUpperCase() + CONFIG.playerName2Pos.slice(1)}! 😊` : `${CONFIG.playerName2Neg.charAt(0).toUpperCase() + CONFIG.playerName2Neg.slice(1)} 😔`}`}
                 </span>
               </div>
             </div>
